--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@
 ## configuração do banco de dados.
 
 spring.datasource.url=jdbc:mysql://localhost:3306/face_zup
-spring.datasource.username=faceZup
-spring.datasource.password=zup42
+spring.datasource.username=zupFace
+spring.datasource.password=1342
 
 ## Comando de comportamento do HIBERNATE
 spring.jpa.hibernate.ddl-auto=update
